--- a/ctcontrol/MainWindow.xaml
+++ b/ctcontrol/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿ <Window x:Class="ctcontrol.MainWindow"
+﻿<Window x:Class="ctcontrol.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -12,11 +12,11 @@
         WindowStyle="None"
         AllowsTransparency="True"
         Background="Transparent">
-     
+
     <Window.DataContext>
         <local:MainViewModel/>
     </Window.DataContext>
-     
+
     <Border
         CornerRadius="0 20 0 20"
         Background="Black"
@@ -24,13 +24,13 @@
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="109"/>
-                <RowDefinition Height="127"/>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="125"/>
+                <RowDefinition Height="31"/>
                 <RowDefinition Height="35"/>
             </Grid.RowDefinitions>
             <Image Grid.Row="0"
                    Grid.RowSpan="4"
-                   Source="Images/Backgroung.png"/>
+                   Source="{DynamicResource Background}"/>
             <Grid Grid.Row="0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
@@ -69,7 +69,7 @@
             </Grid>
             <StackPanel Grid.Row="1"
                         HorizontalAlignment="Center"
-                        Orientation="Vertical">
+                        Orientation="Vertical" Margin="36.383,0" Width="127.234">
                 <TextBlock 
                        Text="Время работы"
                        Foreground="White"
@@ -104,34 +104,64 @@
                        FontSize="15"/>
             </StackPanel>
             <Grid Grid.Row="2">
-                <!--Сон Выключение Перезагрузка Выход из системы-->
+                <Button Margin="25 0 0 0"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        Command="{Binding Sleep}"
+                        Style="{DynamicResource SimpleButton}" Width="25" Height="25"
+                        >
+                    <Image Source="{DynamicResource Sleep}" Margin="0,0,-1,0" HorizontalAlignment="Center"/>
+                </Button>
+                <Button Margin="70 0 0 0"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        Command="{Binding Shutdown}"
+                        Style="{DynamicResource SimpleButton}" Width="25" Height="25"
+                        >
+                    <Image Source="{DynamicResource Shotdown}"/>
+                </Button>
+                <Button Margin="115 0 0 0"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        Command="{Binding Reboot}"
+                        Style="{DynamicResource SimpleButton}" Width="25" Height="25"
+                        >
+                    <Image Source="{DynamicResource Reboot}"/>
+                </Button>
+                <Button Margin="150 0 0 0"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        Command="{Binding Exit}"
+                        Style="{DynamicResource SimpleButton}" Width="25" Height="25"
+                        >
+                    <Image Source="{DynamicResource Lock}"/>
+                </Button>
             </Grid>
+            
+            <!--<Rectangle Grid.Row="2" 
+                HorizontalAlignment="Right"
+                Width="200">
+                <Rectangle.Stroke>
+                    <SolidColorBrush Color="White" Opacity="0.185"/>
+                </Rectangle.Stroke>
+                <Rectangle.Fill>
+                    <SolidColorBrush Color="White" Opacity="0.6"/>
+                </Rectangle.Fill>
+            </Rectangle>-->
+            
             <Grid Grid.Row="3">
                 <Button HorizontalAlignment="Center"
                         VerticalAlignment="Center"
-                        BorderBrush="Transparent"
-                        Background="Transparent"
+                        Content="Блокировка"
+                        Command="{Binding Block}" 
+                        Foreground="Red"
+                        Style="{DynamicResource SimpleButton}"
                         >
-                        <Button.Template>
-                            <ControlTemplate TargetType="Button">
-                                <Border CornerRadius="25"
-                                        BorderBrush="{TemplateBinding BorderBrush}"
-                                        BorderThickness="{TemplateBinding BorderThickness}"
-                                        Height="{TemplateBinding Height}"
-                                        Width="{TemplateBinding Width}">
-
-                                <ContentControl Margin="{TemplateBinding Padding}"
-                                HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                Content="{TemplateBinding Content}" />
-                                </Border>
-                            </ControlTemplate>
-                        </Button.Template>
-                    <Image Source="{StaticResource Button}"
-                           Height="25"
-                           Width="118"/>
                 </Button>
             </Grid>
+            <Rectangle Fill="Black" HorizontalAlignment="Left" Height="8.9" Margin="61.1,3.8,0,0" Grid.Row="3" Stroke="Black" VerticalAlignment="Top" Width="78.8"/>
+            <Rectangle Fill="Black" HorizontalAlignment="Left" Height="8.9" Margin="61.1,24.95,0,0" Grid.Row="3" Stroke="Black" VerticalAlignment="Top" Width="78.8"/>
+
         </Grid>
     </Border>
 </Window>
