--- a/ctcontrol/App.xaml
+++ b/ctcontrol/App.xaml
@@ -7,7 +7,8 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Resources/Resources.xaml"/>
-                <ResourceDictionary Source="Resources/ButtonResources.xaml"/>
+                <ResourceDictionary Source="/Resources/ButtonResources.xaml"/>
+                <ResourceDictionary Source="/Resources/lang.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
