--- a/ctcontrol/MainWindow.xaml
+++ b/ctcontrol/MainWindow.xaml
@@ -18,126 +18,134 @@
         <local:MainViewModel/>
     </Window.DataContext>
 
-    <Border
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="20"/>
+        </Grid.ColumnDefinitions>
+
+        <Border
         CornerRadius="0 20 0 20"
         Background="Black"
+        Grid.Column="0"
         >
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="109"/>
-                <RowDefinition Height="125"/>
-                <RowDefinition Height="31"/>
-                <RowDefinition Height="35"/>
-            </Grid.RowDefinitions>
-            <Image Grid.Row="0"
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="109"/>
+                    <RowDefinition Height="125"/>
+                    <RowDefinition Height="31"/>
+                    <RowDefinition Height="35"/>
+                </Grid.RowDefinitions>
+                <Image Grid.Row="0"
                    Grid.RowSpan="4"
                    Source="{DynamicResource Background}"/>
-            <Grid Grid.Row="0">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" 
+                <Grid Grid.Row="0"
+                      PreviewMouseLeftButtonDown="Move">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <TextBlock Grid.Row="0" 
                        Text="{Binding Data}"
                        Foreground="White"
                        FontFamily="Segoe UI"
                        FontSize="15"
                        Margin="0 15 0 0"
                        HorizontalAlignment="Center"/>
-                <StackPanel Grid.Row="1"
+                    <StackPanel Grid.Row="1"
                             HorizontalAlignment="Center"
                             Orientation="Horizontal">
-                    <TextBlock
+                        <TextBlock
                        Text="{Binding Time}"
                        Foreground="White"
                        Margin="0 0 5 0"
                        FontSize="35"
                        VerticalAlignment="Center"/>
-                    <TextBlock
+                        <TextBlock
                        Text="{Binding Second}"
                        Foreground="White"
                        FontSize="20"
                        VerticalAlignment="Bottom"/>
-                </StackPanel>
-                <TextBlock Grid.Row="2" 
+                    </StackPanel>
+                    <TextBlock Grid.Row="2" 
                        Text="{Binding Day}"
                        Foreground="White"
                        FontFamily="Segoe UI"
                        FontSize="15"
                        Margin="0 3 0 0"
                        HorizontalAlignment="Center"/>
-            </Grid>
-            <StackPanel Grid.Row="1"
+                </Grid>
+                <StackPanel Grid.Row="1"
                         HorizontalAlignment="Center"
                         Orientation="Vertical" Margin="36.383,0" Width="127.234">
-                <TextBlock 
+                    <TextBlock 
                        Text="Время работы"
                        Foreground="White"
                        FontFamily="Segoe UI"
                        HorizontalAlignment="Center"
                        FontSize="15"/>
-                <TextBlock 
+                    <TextBlock 
                        Text="{Binding WorkTime}"
                        Foreground="White"
                        FontFamily="Segoe UI"
                        HorizontalAlignment="Center"
                        Margin="0 5 0 5"
                        FontSize="15"/>
-                <TextBlock 
+                    <TextBlock 
                        Text="Заряд батареи"
                        Foreground="White"
                        FontFamily="Segoe UI"
                        HorizontalAlignment="Center"
                        FontSize="15"/>
-                <TextBlock 
+                    <TextBlock 
                        Text="{Binding Batary}"
                        Foreground="White"
                        FontFamily="Segoe UI"
                        HorizontalAlignment="Center"
                        Margin="0 5 0 0"
                        FontSize="15"/>
-                <TextBlock 
+                    <TextBlock 
                        Text="Контроль системы"
                        Foreground="White"
                        FontFamily="Segoe UI"
                        HorizontalAlignment="Center"
                        FontSize="15"/>
-            </StackPanel>
-            <Grid Grid.Row="2">
-                <Button Margin="25 0 0 0"
+                </StackPanel>
+                <Grid Grid.Row="2">
+                    <Button Margin="25 0 0 0"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
                         Command="{Binding Sleep}"
                         Style="{DynamicResource SimpleButton}" Width="25" Height="25"
                         >
-                    <Image Source="{DynamicResource Sleep}" Margin="0,0,-1,0" HorizontalAlignment="Center"/>
-                </Button>
-                <Button Margin="70 0 0 0"
+                        <Image Source="{DynamicResource Sleep}" Margin="0,0,-1,0" HorizontalAlignment="Center"/>
+                    </Button>
+                    <Button Margin="70 0 0 0"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
                         Command="{Binding Shutdown}"
                         Style="{DynamicResource SimpleButton}" Width="25" Height="25"
                         >
-                    <Image Source="{DynamicResource Shotdown}"/>
-                </Button>
-                <Button Margin="115 0 0 0"
+                        <Image Source="{DynamicResource Shotdown}"/>
+                    </Button>
+                    <Button Margin="115 0 0 0"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
                         Command="{Binding Reboot}"
                         Style="{DynamicResource SimpleButton}" Width="25" Height="25"
                         >
-                    <Image Source="{DynamicResource Reboot}"/>
-                </Button>
-                <Button Margin="150 0 0 0"
+                        <Image Source="{DynamicResource Reboot}"/>
+                    </Button>
+                    <Button Margin="150 0 0 0"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
                         Command="{Binding Exit}"
                         Style="{DynamicResource SimpleButton}" Width="25" Height="25"
                         >
-                    <Image Source="{DynamicResource Lock}"/>
-                </Button>
-                <Path
+                        <Image Source="{DynamicResource Lock}"/>
+                    </Button>
+                    <Path
                     Data="M23.2,0.975 L0.0093757629,30.98125 175.01317,30.98125 199.98734,0.98125008" 
                     Fill="White" 
                     HorizontalAlignment="Left" 
@@ -150,20 +158,22 @@
                     Opacity="0.7"
                     Visibility="{Binding VisibilityBlock}"/>
 
-            </Grid>
+                </Grid>
 
-            <Grid Grid.Row="3">
-                <Button HorizontalAlignment="Center"
+                <Grid Grid.Row="3">
+                    <Button HorizontalAlignment="Center"
                         VerticalAlignment="Center"
                         Content="Блокировка"
                         Command="{Binding Block}" 
                         Style="{DynamicResource BlockButton}"
                         />
 
-            </Grid>
-            <Rectangle Fill="Black" HorizontalAlignment="Left" Height="8.9" Margin="61.1,3.8,0,0" Grid.Row="3" Stroke="Black" VerticalAlignment="Top" Width="78.8"/>
-            <Rectangle Fill="Black" HorizontalAlignment="Left" Height="8.9" Margin="61.1,24.95,0,0" Grid.Row="3" Stroke="Black" VerticalAlignment="Top" Width="78.8"/>
+                </Grid>
+                <Rectangle Fill="Black" HorizontalAlignment="Left" Height="8.9" Margin="61.1,3.8,0,0" Grid.Row="3" Stroke="Black" VerticalAlignment="Top" Width="78.8"/>
+                <Rectangle Fill="Black" HorizontalAlignment="Left" Height="8.9" Margin="61.1,24.95,0,0" Grid.Row="3" Stroke="Black" VerticalAlignment="Top" Width="78.8"/>
 
-        </Grid>
-    </Border>
+            </Grid>
+        </Border>
+
+    </Grid>
 </Window>
