Rename the namespace.

--- a/City/MainWindow.xaml
+++ b/City/MainWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="ctcontrol.MainWindow"
+﻿<Window x:Class="City.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ctcontrol.ViewModel"
-        xmlns:local1="clr-namespace:ctcontrol.ViewModel"
+        xmlns:local="clr-namespace:City.ViewModel"
+        xmlns:local1="clr-namespace:City.ViewModel"
         mc:Ignorable="d"
         Title="MainWindow" 
         Height="300" 
