--- a/City/App.xaml
+++ b/City/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="ctcontrol.App"
+﻿<Application x:Class="City.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ctcontrol"
+             xmlns:local="clr-namespace:City"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
