--- a/City/App.xaml
+++ b/City/App.xaml
@@ -1,15 +1,13 @@
-﻿<Application x:Class="City.App"
+﻿<prism:PrismApplication x:Class="City.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:City"
-             StartupUri="MainWindow.xaml">
+             xmlns:prism="http://prismlibrary.com/">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Resources/Resources.xaml"/>
                 <ResourceDictionary Source="/Resources/ButtonResources.xaml"/>
-                <ResourceDictionary Source="/Resources/lang.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
-</Application>
+</prism:PrismApplication>
