--- a/City/Resources/Resources.xaml
+++ b/City/Resources/Resources.xaml
@@ -224,19 +224,6 @@
     </DrawingImage>
     <!--#endregion-->
     
-    <!--#region Settings-->
-    <DrawingImage x:Key="Settings">
-        <DrawingImage.Drawing>
-            <DrawingGroup ClipGeometry="M0,0 V300 H304 V0 H0 Z">
-                <DrawingGroup.Transform>
-                    <TranslateTransform X="0" Y="2.4563294118706835E-06" />
-                </DrawingGroup.Transform>
-                <GeometryDrawing Brush="#FF000000" Geometry="F1 M304,300z M0,0z M57.8511,81.7987L10.3511,34.7987C-22.6824,100.652,27.3852,169.223,103.351,147.799L256.851,298.299C292.075,304.755,309.166,287.996,302.351,250.799L149.851,97.7987C165.088,21.4568,100.936,-19.6336,34.8511,9.29874L81.8511,56.2987 75.8511,74.7987 57.8511,81.7987z" />
-            </DrawingGroup>
-        </DrawingImage.Drawing>
-    </DrawingImage>
-    <!--#endregion-->
-    
     <!--#region Cross-->
     <DrawingImage x:Key="Cross">
         <DrawingImage.Drawing>
@@ -245,6 +232,93 @@
                     <GeometryDrawing.Pen>
                         <Pen Brush="#FF000000" Thickness="15" StartLineCap="Flat" EndLineCap="Flat" LineJoin="Miter" />
                     </GeometryDrawing.Pen>
+                </GeometryDrawing>
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+    <!--#endregion-->
+    
+    <!--#region Close-->
+    <DrawingImage x:Key="Close">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V12 H12 V0 H0 Z">
+                <DrawingGroup.Transform>
+                    <TranslateTransform X="2.4586915969848633E-07" Y="0" />
+                </DrawingGroup.Transform>
+                <GeometryDrawing Brush="#FFFFFFFF" Geometry="F1 M12,12z M0,0z M11.5944,2.36359L7.95845,5.99992 11.5944,9.63608C12.1352,10.1771 12.1352,11.0535 11.5944,11.5946 11.3242,11.8648 10.9699,12 10.6158,12 10.2611,12 9.90676,11.865 9.63674,11.5946L6.00002,7.95798 2.36357,11.5945C2.09338,11.8647 1.73907,12 1.38465,12 1.03033,12 0.676257,11.865 0.405827,11.5945 -0.135,11.0537 -0.135,10.1773 0.405827,9.63604L4.04165,5.99988 0.40562,2.36359C-0.135207,1.82276 -0.135207,0.946142 0.40562,0.405312 0.946343,-0.135104 1.82243,-0.135104 2.36336,0.405312L5.99998,4.04164 9.63633,0.405312C10.1774,-0.135104 11.0536,-0.135104 11.5942,0.405312 12.1352,0.946142 12.1352,1.82276 11.5944,2.36359z" />
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+    <!--#endregion-->
+    
+    <!--#region Settings-->
+    <DrawingImage x:Key="Setting">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V14 H14 V0 H0 Z">
+                <GeometryDrawing Brush="#FFFFFFFF" Geometry="F1 M14,14z M0,0z M13.2323,5.47983L12.1356,5.34042C12.0452,5.06217,11.9337,4.79383,11.8037,4.53892L12.4809,3.66683C12.7551,3.31392,12.723,2.81575,12.4098,2.51242L11.491,1.59367C11.1847,1.2775,10.6865,1.246,10.333,1.51958L9.46206,2.19683C9.20713,2.06675,8.93879,1.95533,8.65994,1.86492L8.52052,0.77C8.46802,0.33075,8.09525,0,7.65365,0L6.34693,0C5.90533,0,5.53256,0.33075,5.48006,0.76825L5.34064,1.86492C5.06179,1.95533,4.79345,2.06617,4.53852,2.19683L3.66699,1.51958C3.31464,1.246,2.81645,1.2775,2.51252,1.59075L1.59373,2.50892C1.27755,2.81575,1.24547,3.31392,1.51965,3.66742L2.19692,4.53892C2.06625,4.79383,1.95541,5.06217,1.86499,5.34042L0.770032,5.47983C0.330764,5.53233,0,5.90508,0,6.34667L0,7.65333C0,8.09492,0.330764,8.46767,0.768282,8.52017L1.86499,8.65958C1.95541,8.93783,2.06684,9.20617,2.19692,9.46108L1.51965,10.3332C1.24547,10.6861,1.27755,11.1842,1.59082,11.4876L2.5096,12.4063C2.81645,12.7219,3.31405,12.7534,3.66757,12.4798L4.53911,11.8026C4.79403,11.9332,5.06238,12.0447,5.34064,12.1345L5.48006,13.2288C5.53256,13.6692,5.90533,14,6.34693,14L7.65365,14C8.09525,14,8.46802,13.6692,8.52052,13.2317L8.65994,12.1351C8.9382,12.0447,9.20655,11.9332,9.46148,11.8032L10.3336,12.4804C10.6865,12.7546,11.1847,12.7225,11.4881,12.4093L12.4068,11.4905C12.723,11.1837,12.7551,10.6861,12.4809,10.3326L11.8037,9.46108C11.9343,9.20617,12.0458,8.93783,12.1356,8.65958L13.23,8.52017C13.6692,8.46767,14,8.09492,14,7.65333L14,6.34667C14.0006,5.90508,13.6698,5.53233,13.2323,5.47983z M7.00029,9.91667C5.39197,9.91667 4.0835,8.60825 4.0835,7 4.0835,5.39175 5.39197,4.08333 7.00029,4.08333 8.60861,4.08333 9.91708,5.39175 9.91708,7 9.91708,8.60825 8.60861,9.91667 7.00029,9.91667z" />
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+    <!--#endregion-->
+    
+    <!--#region Arrow-->
+    <DrawingImage x:Key="Arrow">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V16 H16 V0 H0 Z">
+                <GeometryDrawing Brush="#FFFFFFFF" Geometry="F1 M16,16z M0,0z M15.0383,6.6905C14.9729,6.67811,14.9066,6.6724,14.8403,6.6734L3.55262,6.6734 3.79875,6.53991C4.03934,6.40714,4.25821,6.22643,4.44556,6.00597L7.61091,2.31505C8.02779,1.85102 8.09784,1.10454 7.7769,0.546353 7.40338,-0.0484566 6.68706,-0.177605 6.17691,0.257938 6.1357,0.293145 6.09653,0.331522 6.05972,0.37282L0.335755,7.04716C-0.111572,7.56818,-0.111966,8.41336,0.334861,8.93496L0.335755,8.936 3.19774,12.2732 6.05972,15.6103C6.5074,16.1309 7.23223,16.1297 7.6787,15.6077 7.71383,15.5666 7.74664,15.5229 7.7769,15.4769 8.09784,14.9187 8.02779,14.1722 7.61091,13.7082L4.45128,10.0106C4.28332,9.81451,4.09021,9.65012,3.87889,9.52335L3.53545,9.34314 14.7773,9.34314C15.3621,9.36846 15.8752,8.89212 15.9851,8.22185 16.0863,7.49414 15.6624,6.80856 15.0383,6.6905z" />
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+    <!--#endregion-->
+    
+    <!--#region Move-->
+    <DrawingImage x:Key="Move">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V14 H14 V0 H0 Z">
+                <GeometryDrawing Brush="#FFFFFFFF">
+                    <GeometryDrawing.Geometry>
+                        <RectangleGeometry RadiusX="0" RadiusY="0" Rect="2,2,2,2" />
+                    </GeometryDrawing.Geometry>
+                </GeometryDrawing>
+                <GeometryDrawing Brush="#FFFFFFFF">
+                    <GeometryDrawing.Geometry>
+                        <RectangleGeometry RadiusX="0" RadiusY="0" Rect="6,2,2,2" />
+                    </GeometryDrawing.Geometry>
+                </GeometryDrawing>
+                <GeometryDrawing Brush="#FFFFFFFF">
+                    <GeometryDrawing.Geometry>
+                        <RectangleGeometry RadiusX="0" RadiusY="0" Rect="10,2,2,2" />
+                    </GeometryDrawing.Geometry>
+                </GeometryDrawing>
+                <GeometryDrawing Brush="#FFFFFFFF">
+                    <GeometryDrawing.Geometry>
+                        <RectangleGeometry RadiusX="0" RadiusY="0" Rect="10,6,2,2" />
+                    </GeometryDrawing.Geometry>
+                </GeometryDrawing>
+                <GeometryDrawing Brush="#FFFFFFFF">
+                    <GeometryDrawing.Geometry>
+                        <RectangleGeometry RadiusX="0" RadiusY="0" Rect="10,10,2,2" />
+                    </GeometryDrawing.Geometry>
+                </GeometryDrawing>
+                <GeometryDrawing Brush="#FFFFFFFF">
+                    <GeometryDrawing.Geometry>
+                        <RectangleGeometry RadiusX="0" RadiusY="0" Rect="6,10,2,2" />
+                    </GeometryDrawing.Geometry>
+                </GeometryDrawing>
+                <GeometryDrawing Brush="#FFFFFFFF">
+                    <GeometryDrawing.Geometry>
+                        <RectangleGeometry RadiusX="0" RadiusY="0" Rect="6,6,2,2" />
+                    </GeometryDrawing.Geometry>
+                </GeometryDrawing>
+                <GeometryDrawing Brush="#FFFFFFFF">
+                    <GeometryDrawing.Geometry>
+                        <RectangleGeometry RadiusX="0" RadiusY="0" Rect="2,6,2,2" />
+                    </GeometryDrawing.Geometry>
+                </GeometryDrawing>
+                <GeometryDrawing Brush="#FFFFFFFF">
+                    <GeometryDrawing.Geometry>
+                        <RectangleGeometry RadiusX="0" RadiusY="0" Rect="2,10,2,2" />
+                    </GeometryDrawing.Geometry>
                 </GeometryDrawing>
             </DrawingGroup>
         </DrawingImage.Drawing>
