--- a/ModuleA/Views/MainView.xaml
+++ b/ModuleA/Views/MainView.xaml
@@ -10,7 +10,7 @@
 
     <Border
         CornerRadius="0 20 0 20"
-        Background="Black"
+        Background="Transparent"
         Grid.Column="0">
 
         <!--#region MainGrid-->
@@ -27,14 +27,6 @@
                 <ColumnDefinition Width="170"/>
                 <ColumnDefinition Width="30"/>
             </Grid.ColumnDefinitions>
-            <!--#endregion-->
-
-            <!--#region Background-->
-            <Image Source="{DynamicResource Background}"
-                   Grid.Row="0"
-                   Grid.Column="0"
-                   Grid.RowSpan="4"
-                   Grid.ColumnSpan="2"/>
             <!--#endregion-->
             
             <!--#region TimeInfo-->
@@ -103,6 +95,7 @@
                     <Button 
                         Grid.Row="1"
                         Command="{Binding SettingCommand}"
+                        CommandParameter="SettingsView"
                         ToolTip="Настройки"
                         Style="{DynamicResource SimpleButton}">
                         <Image Source="{DynamicResource Setting}"/>
