--- a/ModuleA/Views/BaseView.xaml
+++ b/ModuleA/Views/BaseView.xaml
@@ -1,18 +1,12 @@
-﻿<UserControl x:Class="ModuleA.Views.BackgroundView"
+﻿<UserControl x:Class="ModuleA.Views.BaseView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ModuleA.Views"
-             xmlns:prism="http://prismlibrary.com/"
-             prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock Text="{Binding Text}"
-                    FontSize="25"
-                    Foreground="Red"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center"/>
+            
     </Grid>
 </UserControl>
