--- a/ModuleA/Views/CommonView.xaml
+++ b/ModuleA/Views/CommonView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ModuleA.Views"
+             xmlns:resx="clr-namespace:ModuleA.Properties"
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
@@ -14,7 +15,7 @@
         Margin="30 0 0 0">
         <CheckBox IsThreeState="False" 
                   IsChecked="{Binding Switcher}"
-                  Content="Автостарт"
+                  Content="{DynamicResource Autorun}"
                   Foreground="White"
                   />
     </Grid>
