--- a/City/App.xaml
+++ b/City/App.xaml
@@ -1,13 +1,16 @@
 ﻿<prism:PrismApplication x:Class="City.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:prism="http://prismlibrary.com/">
+             xmlns:prism="http://prismlibrary.com/"
+             xmlns:l="clr-namespace:ModuleA.Models;assembly=ModuleA">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Resources/Resources.xaml"/>
                 <ResourceDictionary Source="/Resources/ButtonResources.xaml"/>
+                <ResourceDictionary Source="/ModuleA;component/Resources/lang.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
 </prism:PrismApplication>
+<!--<ResourceDictionary Source="/ModuleA;component/Resources/lang.en-US.xaml"/>-->
