--- a/ModuleA/Views/LanguageView.xaml
+++ b/ModuleA/Views/LanguageView.xaml
@@ -4,15 +4,17 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ModuleA.Views"
+             xmlns:resx="clr-namespace:ModuleA.Properties"
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="173" d:DesignWidth="200">
     <Grid>
-        <TextBlock Text="{Binding Text}"
-                    FontSize="25"
-                    Foreground="Red"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center"/>
+        <ComboBox Name="Language" 
+                      HorizontalAlignment="Center"
+                      VerticalAlignment="Center"
+                      Width="150"
+                      ItemsSource="{Binding Languages}"
+                      SelectedItem="{Binding SelectedLanguage}"/>
     </Grid>
 </UserControl>
