--- a/City/Views/ShellWindow.xaml
+++ b/City/Views/ShellWindow.xaml
@@ -3,7 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:prism="http://prismlibrary.com/"
+        xmlns:prism="http://prismlibrary.com/" 
+        xmlns:svg="http://sharpvectors.codeplex.com/svgc/"
         prism:ViewModelLocator.AutoWireViewModel="True"
         mc:Ignorable="d"
         Title="ShellWindow"
@@ -29,7 +30,7 @@
                 <RowDefinition Height="62"/>
                 <RowDefinition Height="172"/>
                 <RowDefinition Height="31"/>
-                <RowDefinition Height="35"/>
+                <RowDefinition Height="35"/> 
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="170"/>
@@ -43,7 +44,7 @@
                 Grid.Row="0"
                 Grid.RowSpan="4"
                 Grid.ColumnSpan="2"
-                Source="{DynamicResource BackgroundImage}"/>
+                Source="{Binding Background}"/>
             <!--#endregion-->
 
             <ContentControl
