--- a/City/App.xaml
+++ b/City/App.xaml
@@ -2,13 +2,14 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"
-             xmlns:l="clr-namespace:ModuleA.Models;assembly=ModuleA">
+             xmlns:l="clr-namespace:ModuleA.Models;assembly=ModuleA"
+             xmlns:svg="http://sharpvectors.codeplex.com/svgc/">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Resources/Resources.xaml"/>
                 <ResourceDictionary Source="/Resources/ButtonResources.xaml"/>
-                <ResourceDictionary Source="/ModuleA;component/Resources/lang.xaml"/>
+                <ResourceDictionary Source="/Resources/Wallpaper.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
