--- a/ModuleA/Views/BackgroundView.xaml
+++ b/ModuleA/Views/BackgroundView.xaml
@@ -7,12 +7,39 @@
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="173" d:DesignWidth="200">
     <Grid>
-        <TextBlock Text="{Binding Text}"
-                    FontSize="25"
-                    Foreground="Red"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="45"/>
+            <RowDefinition Height="128"/>
+        </Grid.RowDefinitions>
+        <StackPanel Orientation="Horizontal"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center">
+            <Button Style="{DynamicResource SimpleButton}"
+                    Command="{Binding PreviousCommand}"
+                    Height="20"
+                    Width="20">
+                <Image Source="{DynamicResource LeftArrow}"/>
+            </Button>
+            <Button Style="{DynamicResource SimpleButton}"
+                    Command="{Binding ApplyCommand}"
+                    Height="20"
+                    Width="20"
+                    Margin="20 0 20 0">
+                <Image Source="{DynamicResource Accept}"/>
+            </Button>
+            <Button Style="{DynamicResource SimpleButton}"
+                    Command="{Binding NextCommand}"
+                    Height="20"
+                    Width="20">
+                <Image Source="{DynamicResource RightArrow}"/>
+            </Button>
+        </StackPanel>
+        <Image Grid.Row="1"
+               Height="100"
+               HorizontalAlignment="Center"
+               VerticalAlignment="Center"
+               Source="{Binding Background}"/>
     </Grid>
 </UserControl>
