--- a/ModuleA/Views/LanguageView.xaml
+++ b/ModuleA/Views/LanguageView.xaml
@@ -20,7 +20,10 @@
                       Width="150"
                       ItemsSource="{Binding Languages}"
                       SelectedItem="{Binding SelectedLanguage}"/>
-            
+            <Button Margin="0 10 0 0"
+                    Command="{Binding ApplyCommand}"
+                    Content="{x:Static resx:Resources.Apply}"
+                    Style="{DynamicResource BlockButtonStyle}"/>
         </StackPanel>
     </Grid>
 </UserControl>
